--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -17,14 +17,14 @@
 </script>
 {% endif %}
 <div class="bookInfo">
-    {% if book.image_exists %}
-    <img src="data:image/png;base64, {{book.image_base64}}" width="500" height="500" />
-    {% else %}
-    <img src="../static/images/default.jpeg" />
-    {% endif %}
-    <!-- <h2>${{book.price}}</h2> -->
+    <div id="bookImg">
+        {% if book.image_exists %}
+        <img src="data:image/png;base64, {{book.image_base64}}" width="500" height="500" />
+        {% else %}
+        <img src="../static/images/default.jpeg" />
+        {% endif %}
+    </div>
     <div class="bookDetails">
-        <h2>Book Info:</h2>
         <h3>Title: {{book.title}}</h3>
         <h3>Edition: {{book.edition}}</h3>
         <h3>Publisher: {{book.publisher}}</h3>
@@ -66,18 +66,16 @@
 
     {% if is_owner %}
     <form id="delbook" method="GET" action="{{ url_for('delete_book', bookid=book._id) }}">
-        <input type="submit" name="delbookbtn" value="Delete Book Listing">
+        <input type="submit" name="delbookbtn" value="Delete">
     </form>
     <form id="editbook" method="GET" action="{{ url_for('edit_book', bookid=book._id) }}">
-        <input type="submit" name="editbookbtn" value="Edit Book Listing">
+        <input type="submit" name="editbookbtn" value="Edit">
     </form>
     {% else %}
     <!--choose this book to swap-->
-    <div>
-        <form id="requestswap" method="POST">
-            <input type="submit" name="swap" value="Request to Swap">
-        </form>
-    </div>
+    <form id="requestswap" method="POST">
+        <input type="submit" name="swap" value="Request to Trade">
+    </form>
     {% endif %}
 </div>
 
