--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -4,7 +4,7 @@
     {% for book in books %}
         <div id="search-item">
             <a href="{{ url_for('book_info', bookid=book._id)}}">{{book.title}}</a>
-            {% if book["metadata"] %}
+            {% if book.metadata.volumeInfo.imageLinks %}
             <br>
             <br>
             <img class= 'thumbnail' src="{{ book.metadata.volumeInfo.imageLinks.thumbnail }}" width="250" height="250">
